# autoclicker

./: README.md  components.json  index.html  package.json  vite.config.ts
.github/: renovate.json
.github/workflows/: main.yml
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: hotkey_utils.rs  lib.rs  zustand_keys.rs
src/components/: hotkey-control.tsx  speed-control.tsx  theme-toggle.tsx
src/components/ui/: slider.tsx  switch.tsx
src/lib/: autoclicker-store.ts  temp-store.ts  theme-provider.tsx
